--- a/documents/index.html
+++ b/documents/index.html
@@ -5,16 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>目录</title>
-    <style>
-        footer {
-            text-align: center;
-            margin-top: 50px;
-            font-size: 14px;
-            color: #666;
-            padding: 20px;
-            border-top: 1px solid #ccc;
-        }
-    </style>
 </head>
 
 <body>
@@ -25,10 +15,8 @@
         <li><a href="./文档说明.html">文档说明.html</a></li>
         <li><a href="./实现原理.html">实现原理.html</a></li>
         <li><a href="./各文件解释.html">各文件解释.html</a></li>
+        <li><a href="./设计逻辑.html">设计逻辑.html</a></li>
     </ul>
-    <footer>
-        <p>本文档由<a href="https://github.com/xpingxfp">xpingxfp</a>制作</p>
-    </footer>
 </body>
 
 </html>
