--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         }
 
         .box .header .name:hover {
-            background-color: rgb(241, 123, 241);
+            background-color: #F27ED3;
             border-radius: 10px 0 0 10px;
             box-shadow: -3px 0 3px #670067;
         }
@@ -94,7 +94,7 @@
             cursor: pointer;
             outline: none;
             background: transparent;
-            color: rgb(241, 123, 241);
+            color: #F27ED3;
             font-family: 'Times New Roman', Times, serif;
             font-weight: 700;
             text-align: center;
@@ -111,7 +111,7 @@
             left: 0;
             width: 5px;
             height: 100%;
-            background-color: rgb(241, 123, 241);
+            background-color: #F27ED3;
             z-index: -1;
             transition: all 0.5s;
         }
@@ -128,7 +128,7 @@
             right: 0;
             width: 5px;
             height: 100%;
-            background-color: rgb(241, 123, 241);
+            background-color: #F27ED3;
             z-index: -1;
             transition: all 0.5s;
         }
@@ -144,7 +144,7 @@
         }
 
         .box .footer:active:before {
-            background: rgb(210, 94, 142);
+            background: #F2A7DE;
             width: 100%;
             border-radius: 10px;
             content: "错误";
@@ -162,7 +162,7 @@
         }
 
         .box.ok .footer:active::after {
-            background: rgb(255, 136, 196);
+            background: #733C64;
             width: 100%;
             border-radius: 10px;
             content: "开始";
@@ -188,7 +188,7 @@
         }
 
         .box .column:hover {
-            background-color: rgb(241, 123, 241);
+            background-color: #F27ED3;
         }
 
         .box .column .button {
