--- a/tool/颜色选择器页面.html
+++ b/tool/颜色选择器页面.html
@@ -342,7 +342,7 @@
         }
 
         window.onload = () => {
-            document.getElementById("colorInput").value = "#FF0000"; // Default color
+            document.getElementById("colorInput").value = "#F27ED3"; // Default color
             updateControls(); // Initialize controls with default color
         };
     </script>
