--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         .box .header .name:hover {
             background-color: #F27ED3;
             border-radius: 10px 0 0 10px;
-            box-shadow: -3px 0 3px #670067;
+            box-shadow: -3px 0 3px #a1107a;
         }
 
         .box .content {
@@ -144,7 +144,7 @@
         }
 
         .box .footer:active:before {
-            background: #F2A7DE;
+            background: #ff71d9;
             width: 100%;
             border-radius: 10px;
             content: "错误";
@@ -162,7 +162,7 @@
         }
 
         .box.ok .footer:active::after {
-            background: #733C64;
+            background: #b10082;
             width: 100%;
             border-radius: 10px;
             content: "开始";
@@ -204,18 +204,18 @@
         }
 
         .box .column.ok .button {
-            border: 2px solid #5eff00;
-            color: #00ff00;
+            border: 2px solid #52ff3e;
+            color: #52ff3e;
         }
 
         .box .column.set .button {
-            border: 2px solid #ff8800;
-            color: #ff8800;
+            border: 2px solid #ff893e;
+            color: #ff893e;
         }
 
         .box .column.error .button {
-            border: 2px solid #ff5100;
-            color: #ff1100;
+            border: 2px solid #ff413e;
+            color: #ff413e;
         }
 
         .box .column .button:hover {
@@ -231,6 +231,8 @@
 
 <body>
     <script>
+        let basePath = '/';
+
         let box = document.createElement('div');
         box.classList.add("box");
         document.body.appendChild(box);
@@ -273,7 +275,7 @@
         box.appendChild(header);
 
         let icon = document.createElement('img');
-        icon.src = "/icon.png";
+        icon.src = `${basePath}icon.png`;
         icon.alt = "icon";
         header.appendChild(icon);
 
@@ -311,8 +313,8 @@
             if (state) {
                 box.classList.add("ok");
                 footer.onmouseup = () => {
-                    if (currentPath === '/' || currentPath.endsWith('/index.html')) {
-                        window.location.href = "app/page/start.html";
+                    if (currentPath === basePath || currentPath.endsWith(`${basePath}index.html`)) {
+                        window.location.href = `${basePath}app/page/start.html`;
                     } else {
                         window.location.reload();
                     }
@@ -362,7 +364,6 @@
         let serviceWorkerSet = document.createElement("div");
         let serviceWorkerColumn = column("service worker 支持", serviceWorkerSet);
 
-
         function getDBInstance(dbName, version = 1) {
             return new Promise((resolve, reject) => {
                 let request = window.indexedDB.open(dbName, version);
@@ -401,7 +402,7 @@
             span.innerHTML = "你的浏览器支持service worker</br>";
             serviceWorkerSet.appendChild(span);
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/sw.js', { scope: '/' })
+                navigator.serviceWorker.register(`${basePath}sw.js`, { scope: basePath })
                     .then((registration) => {
                         serviceWorkerSet.innerHTML += "成功添加sw.js文件</br>";
                     })
@@ -563,7 +564,6 @@
             }
         }
     </script>
-    <!-- <script src="./load.js"></script> -->
 </body>
 
 </html>
